first draft of website

--- a/src/components/SocialIcons.astro
+++ b/src/components/SocialIcons.astro
@@ -9,10 +9,11 @@ export interface Props {
 const { icon_size } = Astro.props;
 ---
 <ul class="not-prose flex flex-wrap gap-2">
-    <SocialIcon icon_size={icon_size} URL="#" icon="twitter-x"/>
-    <SocialIcon icon_size={icon_size} URL="#" icon="github"/>
-    <SocialIcon icon_size={icon_size} URL="#" icon="linkedin"/>
-    <SocialIcon icon_size={icon_size} URL="#" icon="envelope-fill"/>
-    <SocialIcon icon_size={icon_size} URL="#" icon="mortarboard-fill"/>
+    <SocialIcon icon_size={icon_size} URL="https://bsky.app/nsteiner" icon="stars"/>
+    <SocialIcon icon_size={icon_size} URL="https://github.com/nicksteiner" icon="github"/>
+    <SocialIcon icon_size={icon_size} URL="https://www.linkedin.com/in/steinernick" icon="linkedin"/>
+    <SocialIcon icon_size={icon_size} URL="mailto:nsteiner@ccny.cuny.edu" icon="envelope-fill"/>
+    <SocialIcon icon_size={icon_size} URL="https://scholar.google.com/citations?user=RkTU7-YAAAAJ" icon="mortarboard-fill"/>
+    <SocialIcon icon_size={icon_size} URL="https://www.ccny.cuny.edu/profiles/nick-steiner" icon="building"/>
     <SocialIcon icon_size={icon_size} URL={`${SITE.SITEURL}/rss.xml`} icon="rss-fill"/>
 </ul>
