--- a/src/components/BackToPrevious.astro
+++ b/src/components/BackToPrevious.astro
@@ -6,8 +6,15 @@ type Props = {
 const { href } = Astro.props;
 ---
 
+---
+const isAbsoluteInternal = href?.startsWith("/");
+const resolvedHref = isAbsoluteInternal
+  ? `${import.meta.env.BASE_URL}${href.replace(/^\//, "")}`
+  : href;
+---
+
 <a
-  href={href}
+  href={resolvedHref}
   class="not-prose group relative flex w-fit flex-nowrap rounded border border-black/15 py-1.5 pl-7 pr-3 transition-colors duration-300 ease-in-out hover:bg-black/5 hover:text-black focus-visible:bg-black/5 focus-visible:text-black dark:border-white/20 dark:hover:bg-white/5 dark:hover:text-white dark:focus-visible:bg-white/5 dark:focus-visible:text-white"
 >
   <svg
