--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,7 +19,7 @@ const { title, description } = Astro.props;
 <html lang="en">
   <head>
     <Head title={`${title} | ${SITE.TITLE}`} description={description} />
-    <link rel="stylesheet" href="/path/to/your/global.css">
+    <!-- Removed placeholder global.css link -->
   </head>
   <body>
     <Header />
