--- a/src/components/Link.astro
+++ b/src/components/Link.astro
@@ -1,7 +1,7 @@
-import type { HTMLAttributes } from "astro/types";
+---
 import { cn } from "@lib/utils";
 
-type Props = Omit<HTMLAttributes<"a">, "href"> & {
+type Props = {
   href: string;
   external?: boolean;
   underline?: boolean;
@@ -14,18 +14,12 @@ const {
   underline = true,
   group = false,
   ...rest
-} = Astro.props as Props;
-
-const isExternal = external ?? /^(https?:)?\/\//.test(href);
-const isAbsoluteInternal = !isExternal && href?.startsWith("/");
-const resolvedHref = isAbsoluteInternal
-  ? `${import.meta.env.BASE_URL}${href.replace(/^\//, "")}`
-  : href;
+} = Astro.props;
 ---
 
 <a
-  href={resolvedHref}
-  target={isExternal ? "_blank" : "_self"}
+  href={href}
+  target={external ? "_blank" : "_self"}
   class={cn(
     "inline-block decoration-black/30 hover:decoration-black/50 focus-visible:decoration-black/50 dark:decoration-white/30 dark:hover:decoration-white/50 dark:focus-visible:decoration-white/50  hover:text-cyan-500 focus-visible:text-black dark:hover:text-orange-500 dark:focus-visible:text-white transition-colors duration-300 ease-in-out",
     underline && "underline underline-offset-[3px]",
